feat!: add limit / offset to categories API
